# slsDetectorPackage

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  COPYING  CtbGui  CtbGui.py  CtbGui.ui  MANIFEST.in  Makefile  Makefile.include  README.md  RELEASE.txt  a.sh  alias_utility.py  bash_autocomplete.sh  bit_utils.py  branchall.sh  checkLicenceNotice.sh  checkout.sh  cleansharedmemory.sh  client.py  cmk.sh  commitVersions.sh  configure  decoder.py  defines.py  diffall.sh  doxy.config  evalVersionVariables.sh  exportSoftware.sh  fetch.sh  genVersionHeader.sh  gitall.sh  nohup.out  notice_to_add_for_every_file  pixelmap.py  (+21 more)
ctbGui/: CMakeLists.txt  Makefile.root5  Makefile.root6  ctbAcquisition.cpp  ctbAcquisition.h  ctbAdcs.cpp  ctbAdcs.h  ctbDacs.cpp  ctbDacs.h  ctbDefs.h  ctbGui.cpp  ctbLinkDef.h  ctbMain.cpp  ctbMain.h  ctbPattern.cpp  ctbPattern.h  ctbPowers.cpp  ctbPowers.h  ctbSignals.cpp  ctbSignals.h  ctbSlowAdcs.cpp  ctbSlowAdcs.h
ctbGui/patternGenerator/: deserializer.cpp  generate.sh  generator.c
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  gen_server_doc.py.in
docs/src/: ToString.rst  binaryfileformat.rst  commandline.rst  consuming.rst  container_utils.rst  ctbframeformat.rst  dependencies.rst  detector.rst  examples.rst  fileformat.rst  firmware.rst  gendoc.cpp  hdf5fileformat.rst  index.rst  installation.rst  masterfileattributes.rst  multidet.rst  pattern.rst  pyPatternGenerator.rst  pydetector.rst  pyenums.rst  pyexamples.rst  pygettingstarted.rst  quick_start_guide.rst  rawdatafileformat.rst  receiver.rst  receiver_api.rst  receivers.rst  result.rst  serverbackground.rst  serverdefaults.rst  servers.rst  serverupgrade.rst  slsreceiver.rst  slsreceiverheaderformat.rst  troubleshooting.rst  type_traits.rst  udpconfig.rst  udpdetspec.rst  udpheader.rst  (+2 more)
integrationTests/: CMakeLists.txt  a.cpp  config.h  test-eigerIntegration.cpp  test-integrationDectector.cpp  test-integrationMulti.cpp  test.cpp
integrationTests/src/: a.cpp  test-slsDetector.cpp
libs/qwt/: CMakeLists.txt
pyctbgui/: .gitignore  MANIFEST.in  README.md  __init__.py  client.py  pyproject.toml
pyctbgui/services/: ADC.py  Acquisition.py  DACs.py  Pattern.py  Plot.py  PowerSupplies.py  Signals.py  SlowADCs.py  Transceiver.py  __init__.py
pyctbgui/src/: decoder.c  pm_decode.c  pm_decode.h  thread_utils.h
pyctbgui/ui/: CtbGui.ui  Dacs.ui  MainWindow.py  Plot.ui  acquisition.ui  pattern.ui  plot.ui  powerSupplies.ui  transceiver.ui
pyctbgui/utils/: __init__.py  alias_utility.py  bit_utils.py  decoder.py  defines.py  globals.py  pixelmap.py  plotPattern.py  recordOrApplyPedestal.py
python/: CMakeLists.txt  MANIFEST.in  README.md  setup.py
python/api-tests/: test_detector.py  test_jungfrau.py
python/conda-recepie/: build.sh  meta.yaml
python/conda-recipe/: meta.yaml
python/examples/: exposure_time.py  manipulate_pattern.py  non-blocking-acquire-process.py  non-blocking-acquire.py  reading_dacs.py  reading_temperature.py  threshold_scan.py  use_currentsource.py  use_enum.py  use_pedestalmode.py  using_scan.py
python/scripts/: basic.py  cmd_python.py  compare_with_commandline.py  compile_servers.py  frameSynchronizerPullSocket.py  generate_enums.py  generate_functions.py  generate_pydef.py  list_tested_cmd.py  parse.py  test_virtual.py
python/sls_detector/: __init__.py  adcs.py  ctb.py  dacs.py  decorators.py  detector.py  detector_property.py  eiger.py  errors.py  experimental.py  jungfrau.py  jungfrau_ctb.py  registers.py  utils.py
python/slsdet/: PatternGenerator.py  __init__.py  adcs.py  bits.py  ctb.py  dacs.py  decorators.py  defines.py  detector.py  detector_property.py  eiger.py  enums.py  errors.py  format.py  gaincaps.py  gotthard.py  gotthard2.py  jsonproxy.py  jungfrau.py  lookup.py  moench.py  mythen3.py  pattern.py  patterntools.py  powers.py  proxy.py  registers.py  slowadcproxy.py  slowadcs.py  temperature.py  utils.py  voltages.py
python/sphinx/: Makefile  code_quality.rst  command_line.rst  conf.py  cpp_api.rst  error-handling.rst  examples.rst  getting_started.rst  index.rst  installation.rst  makedocs.sh  modules.rst  sls_detector.rst
python/src/: Detector.h  DetectorPythonInterface.h  DurationWrapper.cpp  DurationWrapper.h  current.cpp  detector.cpp  detector_in.cpp  duration.cpp  enums.cpp  enums_in.cpp  experimental.cpp  main.cpp  mythenFileIO.h  network.cpp  pattern.cpp  pedestal.cpp  py_headers.h  scan.cpp  typecaster.h
python/tests/: detector_eiger.py  detector_test.py  test_DurationWrapper.py  test_PatternGenerator.py  test_bits.py  test_enums.py  test_format.py  test_m3gaincaps.py  test_patterntools.py  test_utils.py
python/unit-tests/: dac_test.py  detector_eiger.py  detector_test.py  test_detector_property.py  test_utils.py
sample/: CMakeLists.txt  api.cpp  time.cpp  udp.cpp  useResult.cpp  using_logger.cpp
slsDetectorCalibration/jungfrauExecutables/: CMakeLists.txt  Makefile  Makefile.cluster_finder  Makefile.rawdataprocess  Makefile.zmq  Makefile.zmqrootdisp  examples.txt  jungfrauClusterFinder  jungfrauClusterFinder.cpp  jungfrauClusterFinder.cpp~  jungfrauInterpolation.cpp  jungfrauPhotonCounter.cpp  jungfrauRawDataProcess.cpp  jungfrauRawDataProcess_argvunlimited.cpp  jungfrauZmqProcess.cpp  (+5 more)
slsDetectorGui/: .gitignore  CMakeLists.txt  Makefile  doxy.config  gitInfo.txt  gitInfoGui.h  slsDetectorGui.pro  updateGitVersion.sh
slsDetectorServers/: .gitignore  CMakeLists.txt  compileAllServers.sh  compileAllServers_noAPIUpdate.sh  compileEigerServer.sh
slsDetectorSoftware/: .__afsCE79  .gitignore  CMakeLists.txt  Makefile  Makefile.Standalone  Makefile.x04sa  README  doxy.config  gitInfo.txt  slsDetectorClient.doxy  slsDetectorUsers.doxy  svnInfo.h  updateGitVersion.sh  very_special_functions.txt
slsReceiverSoftware/: .gitignore  CMakeLists.txt  Makefile  gitInfo.txt  slsReceiverUsers.doxy  updateGitVersion.sh
slsSupportLib/: CMakeLists.txt
tests/: CMakeLists.txt  test.cpp  test_alias_file.py  test_bit_utils.py  test_decoder.py  test_npy_writer.py  test_npz_writer.py
(+2769 files in other folders)
